--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /********** Template CSS **********/
 :root {
-    --primary: #0463FA;
+    --primary: #077c0d;
     --light: #EFF5FF;
     --dark: #1B2C51;
 }
