--- a/css/style.css
+++ b/css/style.css
@@ -241,7 +241,8 @@
 }
 
 .breadcrumb-item + .breadcrumb-item::before {
-    color: var(--light);
+    color: var(--success);
+    /*color: var(--light); */
 }
 
 
@@ -338,35 +339,6 @@
     color: #FFFFFF;
     background: var(--success);
 }
-
-
-/*** Appointment ***/
-.bootstrap-datetimepicker-widget.bottom {
-    top: auto !important;
-}
-
-.bootstrap-datetimepicker-widget .table * {
-    border-bottom-width: 0px;
-}
-
-.bootstrap-datetimepicker-widget .table th {
-    font-weight: 500;
-}
-
-.bootstrap-datetimepicker-widget.dropdown-menu {
-    padding: 10px;
-    border-radius: 2px;
-}
-
-.bootstrap-datetimepicker-widget table td.active,
-.bootstrap-datetimepicker-widget table td.active:hover {
-    background: var(--success);
-}
-
-.bootstrap-datetimepicker-widget table td.today::before {
-    border-bottom-color: var(--success);
-}
-
 
 /*** Testimonial ***/
 .testimonial-carousel::before {
